<resources>
    <string name="app_name">Slabko Vlad Launcher</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="next">Далее</string>
    <string name="app_description">Описание приложения</string>
    <string name="app_title">SlabkoVladLauncher</string>
    <string name="hello">Welcome</string>
    <string name="light_theme">Светлая тема</string>
    <string name="dark_theme">Темная тема</string>
    <string name="stand">Стандартный макет</string>
    <string name="full">Полный макет</string>
    <string name="stand_info">Портретная: 4 иконки в ряд\nЛандшафтная: 6 иконок в ряд</string>
    <string name="full_info">Портретная: 5 иконки в ряд\nЛандшафтная: 7 иконок в ряд</string>
    <string name="grid">Сетка</string>
    <string name="list">Список</string>
    <string name="profile">Профиль</string>
    <string name="settings">Настройки</string>
    <string name="author_name">Слабко Владислав</string>

    <string name="settings_maquette">Макет LauncherPage</string>
    <string name="settings_theme">Тема приложения</string>
    <string name="settings_sort">Сортировка</string>
    <string name="settings_sort_summary">Расположение иконок приложений</string>

    <string name="theme_title">Тема</string>

    <string name="maquette_title">Макет(Портретный/Ландшафтный)</string>
    <string name="maquette_first">4/6</string>
    <string name="maquette_second">5/7</string>
    <string name="sort_type">Тип сортировки</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="desk">Рабочий стол</string>
    <string name="context_delete">Удалить</string>
    <string name="context_number">Частота</string>
    <string name="context_info">Информация</string>
</resources>
