<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single">
        android:textSize="18sp"
        <item
            android:id="@+id/nav_desk"
            android:icon="@drawable/ic_desk"
            android:title="@string/desk"
            android:checked="true"/>
        <item
            android:id="@+id/nav_grid"
            android:icon="@drawable/ic_grid"
            android:title="@string/grid"
            android:checked="true"/>
        <item
            android:id="@+id/nav_list"
            android:icon="@drawable/ic_list"
            android:title="@string/list" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
    </group>
</menu>