<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".welcomePage.FourthFragment">

    <RadioGroup
        android:id="@+id/radio2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="110dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginBottom="10dp">

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/back"
                android:buttonTint="@color/colorPrimary"
                android:checked="true"
                android:paddingLeft="20dp"
                android:text="@string/stand"
                android:textSize="60px" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="60dp"
                android:layout_marginLeft="20dp"
                android:text="@string/stand_info"
                android:textSize="42px"
                android:textStyle="bold" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/back"
            android:layout_marginTop="10dp">
            <RadioButton
                android:id="@+id/radioButton4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:paddingLeft="20dp"
                android:text="@string/full"
                android:textSize="60px"
                android:buttonTint="@color/colorPrimary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="60dp"
                android:layout_marginLeft="20dp"
                android:text="@string/full_info"
                android:textSize="42px"
                android:textStyle="bold" />
        </FrameLayout>

    </RadioGroup>

    <Button
        android:id="@+id/button4"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="114dp"
        android:layout_height="50dp"
        android:layout_above="@+id/radio1"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="@id/radio1"
        app:layout_constraintEnd_toEndOf="@id/radio1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />

</RelativeLayout>